--- a/src/main/webapp/add-food-item.html
+++ b/src/main/webapp/add-food-item.html
@@ -12,7 +12,7 @@
 .main{
 	border: 2px solid red;
 	border-radius: 10px;
-	height: 400px;
+	height: 600px;
 	width: 500px;
 	padding: 20px;
 	background-color: rgb(255, 255, 255);
@@ -23,22 +23,81 @@
 	margin-right: 400px;
 
 }
+.inp{
+	width: 350px;
+	height: 40px;
+	border-radius: 5px;
+	border-top: white;
+	margin-top: 20px;
+	border-bottom: 2px solid rgb(177, 172, 172);
+	border-left: white;
+	border-right: white;
+	outline: none;
+}
+.addbut{
+	background-color: rgb(0, 128, 0);
+	border-radius: 5px;
+	color: white;
+	height: 50px;
+	width: 200px;
+	position: relative;
+	top: 50px;
+	font-weight: bold;
+	font-size: 20px;
+	border: none;
+	transition-property: all;
+	transition-timing-function: ease-in-out;
+	transition-duration: 0.5s;
+	box-shadow: 0px 0px 10px greenyellow;
+	cursor: pointer;
+}
+.addbut:hover{
+	background-color: greenyellow;
+	transform: scale(1.1);
+	transition-property: all;
+	transition-timing-function: ease-in-out;
+	transition-duration: 0.5s;
+	box-shadow: 0px 0px 10px greenyellow;
+	color: black;
+	cursor: pointer;
+	border: none;
+
+}
+.radio{
+	margin-top: 20px;
+	font-size: 100px;
+	font-weight: bold;
+	margin-left: 20px;
+	margin-right: 20px;
+	color: black;
+	font-weight: bold;
+	margin-left: 50px;
+
+}
+.file{
+	position: relative;
+	left: 30px;
+	
+
+}
 
 
 </style>
 	</head>
 	<body>
 		<div align="center" class="main">
-			<h1>Enter Food Details</h1><br><br>ss
+			<h1>Enter Food Details</h1><br><br>
 			<form action="add-food-item" method="post"
 				enctype="multipart/form-data">
-				Name:<input type="text" name="name"><br><br> Cost:<input
-					type="text" name="price"><br> Type:<input type="radio"
-					name="type" value="veg">VEG<input type="radio" name="type"
-					value="non-veg">NON-VEG<br> Stock :<input type="number"
-					name="stock"><br> Picture :<input type="file"
-					name="image"><br>
-				<button>Add</button>
+				<input type="text" name="name" class="inp" placeholder="Enter Food Item Name"
+					id="email"
+					required><br><br> <input type="number" name="price" class="inp"
+					placeholder="Enter Price" required><br><br> <input type="radio"
+					name="type" class="radio" alue="veg">VEG <input type="radio" name="type"
+					value="non-veg" class="radio">NON-VEG<br> <br><input type="number" class="inp"
+					name="stock" placeholder="Stock"><br><br> <br><input type="file"
+					name="image" class="file"  placeholder="Picture"><br><br>
+				<button class="addbut">Add</button>
 			</form>
 		</div>
 	</body>
