--- a/src/main/webapp/add-food-item.html
+++ b/src/main/webapp/add-food-item.html
@@ -93,7 +93,7 @@
 					id="email"
 					required><br><br> <input type="number" name="price" class="inp"
 					placeholder="Enter Price" required><br><br> <input type="radio"
-					name="type" class="radio" alue="veg">VEG <input type="radio" name="type"
+					name="type" class="radio" value="veg">VEG <input type="radio" name="type"
 					value="non-veg" class="radio">NON-VEG<br> <br><input type="number" class="inp"
 					name="stock" placeholder="Stock"><br><br> <br><input type="file"
 					name="image" class="file"  placeholder="Picture"><br><br>
